unpackaged/main/default/objects/ET_Error_Logs__c/ET_Error_Logs__c.object-meta.xml
<CustomObject>
    <description>To Capture Error Logs. Generic for all Modules</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>