unpackaged/main/default/objects/ET_Error_Logs__c/fields/ET_Exception_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Exception_Line_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Line Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>