unpackaged/main/default/objects/ET_Error_Logs__c/fields/ET_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>ET_Exception_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>