unpackaged/main/default/objects/ET_Error_Logs__c/fields/ET_Exception_Trace__c.field-meta.xml
<CustomField>
    <fullName>ET_Exception_Trace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Trace</label>
    <type>TextArea</type>
</CustomField>