unpackaged/main/default/objects/ET_Error_Logs__c/fields/ET_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Exception_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>