unpackaged/main/default/objects/ET_Error_Logs__c/fields/ET_Module__c.field-meta.xml
<CustomField>
    <fullName>ET_Module__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>