unpackaged/main/default/objects/ET_Error_Logs__c/fields/Exception_Trace_large__c.field-meta.xml
<CustomField>
    <fullName>Exception_Trace_large__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Trace(large)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>