unpackaged/main/default/objects/ET_Error_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Exception_Type__c</columns>
    <columns>ET_Module__c</columns>
    <columns>ET_Exception_Line_Number__c</columns>
    <columns>ET_Exception_Message__c</columns>
    <columns>ET_Exception_Trace__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>